--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rita Pecuch Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -33,7 +34,7 @@
         </section>
 
         <section>
-            <h2>Work</h2>
+            <h2 id="work">Work</h2>
             <article>
                 <h3>Main Project</h3>
                 <p>
@@ -71,7 +72,7 @@
         </section>
 
         <section>
-            <h2>Contact Info</h2>
+            <h2 id="contact-me">Contact Info</h2>
             <ul>
                 <li>Phone</li>
                 <li>Email</li>
@@ -81,6 +82,7 @@
         </section>
 
         <section>
+            <h2 id="resume">Resume</h2>
             <p>
                 Coming soon!
             </p>
