styled a few elements

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="about-me-section">
             <article>
                 <h2 id="about-me">About Me</h2>
                 <p>
@@ -33,8 +33,9 @@
             <img src="https://dummyimage.com/200" alt="placeholder">
         </section>
 
-        <section>
+        <section class="work-section">
             <h2 id="work">Work</h2>
+
             <article>
                 <h3>Main Project</h3>
                 <p>
@@ -71,7 +72,7 @@
             </article>
         </section>
 
-        <section>
+        <section class="contact-section">
             <h2 id="contact-me">Contact Info</h2>
             <ul>
                 <li>Phone</li>
@@ -81,7 +82,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class="resume-section">
             <h2 id="resume">Resume</h2>
             <p>
                 Coming soon!
