added some colors and pseudo-classes

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 
     <main>
         <section>
-            <article>
+            <article class="border-bottom">
                 <h2 id="about-me">About Me</h2>
                 <div class="about-section">
                     <p>
-                        I am a new web development student that just started the full-time bootcamp at Rutgers University! I come from a background of biology and healthcare. I graduated from Oakland University with a B.S. in Biomedical Science in May 2021, and worked in the field for four years. I am interested in creating applications for use in healthcare, STEM, and athletics!
+                        I am a new web development student that just started the full-time bootcamp at Rutgers University! I come from a background of biology and healthcare. I graduated from Oakland University with a B.S. in Biomedical Science in May 2021, and worked in the field for four years. I am interested in creating applications for use in healthcare, STEM, and athletics! I am very knowledgeable in both the healthcare and competitive basketball industries.
                     </p>
-                    <img src="https://dummyimage.com/150" alt="placeholder">
+                    <img src="./assets/images/headshot.jpg" alt="professional headshot">
                 </div>
             </article>
 
-            <article class="projects">
+            <article class="projects border-bottom">
                 <h2 id="work">Work</h2>
                 <article class="main-project">
                     <img src="https://dummyimage.com/200" alt="placeholder">
@@ -78,7 +78,7 @@
                 </div>
             </article>
 
-            <article>
+            <article class="resume">
                 <h2 id="resume">Resume</h2>
                 <p>
                     Coming soon!
@@ -89,13 +89,19 @@
         <aside>
             <h2 id="contact-me">Contact Info</h2>
             <ul>
-                <li>Phone</li>
-                <li>Email</li>
+                <li class="hover">Phone</li>
+                <li class="hidden">517-375-7765</li>
+                <li class="hover">Email</li>
+                <li class="hidden">rpecuch@comcast.net</li>
                 <li><a href="https://github.com/rpecuch">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/rita-pecuch-6ab517156/">LinkedIn</a></li>
             </ul>
         </aside>
     </main>
+
+    <footer>
+        <p>Thank you for visiting!</p>
+    </footer>
     
 </body>
 </html>
