--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <article class="projects border-bottom">
                 <h2 id="work">Work</h2>
                 <article class="main-project">
-                    <img src="https://dummyimage.com/200" alt="placeholder">
-                        <h3>Main Project</h3>
+                    <a href="https://rpecuch.github.io/prework-study-guide/"><img src="./assets/images/prework-study-guide.png" alt="image of prework study guide project"></a>
+                        <h3>Prework Study Guide</h3>
                         <p class="hidden-dsc">
-                            Description and link coming soon!
+                            An organized platform for bootcamp students to view notes from prework. Click on the image to view the deployed application!
                         </p>
                 </article>
                 <div class="other-projects">
@@ -89,10 +89,8 @@
         <aside>
             <h2 id="contact-me">Contact Info</h2>
             <ul>
-                <li class="hover">Phone</li>
-                <li class="hidden">517-375-7765</li>
-                <li class="hover">Email</li>
-                <li class="hidden">rpecuch@comcast.net</li>
+                <li id="phone">Phone</li>
+                <li id="email">Email</li>
                 <li><a href="https://github.com/rpecuch">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/rita-pecuch-6ab517156/">LinkedIn</a></li>
             </ul>
