added skills and cleaned up css file

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 <h2 id="about-me">About Me</h2>
                 <div class="about-section">
                     <p>
-                        I am a new web development student that just started the full-time bootcamp at Rutgers University! I come from a background of biology and healthcare. I graduated from Oakland University with a B.S. in Biomedical Science in May 2021, and worked in the field for four years. I am interested in creating applications for use in healthcare, STEM, and athletics! I am very knowledgeable in both the healthcare and competitive athletics industries.
-                    </p>
+                        I am a new web development student that just started the full-time bootcamp at Rutgers University! I come from a background of biology and healthcare. I graduated from Oakland University with a B.S. in Biomedical Science in May 2021, and worked in the field for four years. I am interested in creating applications for use in healthcare, STEM, and athletics! I am very knowledgeable in both the healthcare and competitive athletics industries. <br><span id="skills">Skills: HTML, CSS, Git, JavaScript</span></p>
                     <img src="./assets/images/headshot.jpg" alt="professional headshot">
                 </div>
             </article>
