added new skill and screenshot of updated app

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2 id="about-me">About Me</h2>
                 <div class="about-section">
                     <p>
-                        I am a new web development student that just started the full-time bootcamp at Rutgers University! I come from a background of biology and healthcare. I graduated from Oakland University with a B.S. in Biomedical Science in May 2021, and worked in the field for four years. I am interested in creating applications for use in healthcare, STEM, and athletics! I am very knowledgeable in both the healthcare and competitive athletics industries. <br><span id="skills">Skills: HTML, CSS, Git, JavaScript</span></p>
+                        I am a new web development student that just started the full-time bootcamp at Rutgers University! I come from a background of biology and healthcare. I graduated from Oakland University with a B.S. in Biomedical Science in May 2021, and worked in the field for four years. I am interested in creating applications for use in healthcare, STEM, and athletics! I am very knowledgeable in both the healthcare and competitive athletics industries. <br><span id="skills">Skills: HTML, CSS, Git, JavaScript, DOM</span></p>
                     <img src="./assets/images/headshot.jpg" alt="professional headshot">
                 </div>
             </article>
@@ -39,7 +39,7 @@
                     <a href="https://rpecuch.github.io/prework-study-guide/"><img src="./assets/images/prework-study-guide.png" alt="image of prework study guide project"></a>
                         <h3>Prework Study Guide</h3>
                         <p class="hidden-dsc">
-                            An organized platform for bootcamp students to view notes from prework. Click on the image to view the deployed application!
+                            An organized platform for bootcamp students to review concepts from prework. Click on the image to view the deployed application!
                         </p>
                 </article>
                 <div class="other-projects">
