created updated about me page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <nav class="navbar navbar-light">
         <!-- need to link these either here or with js -->
-        <a class="navbar-brand" href="#" id="home">Home</a>
-        <a class="navbar-brand" href="#" id="about">About</a>
-        <a class="navbar-brand" href="#" id="work-samples">Work Samples</a>
-        <a class="navbar-brand" href="#" id="resume">Resume</a>
-        <a class="navbar-brand" href="#" id="contact">Contact</a>
+        <a class="navbar-brand" href="./index.html" id="home">Home</a>
+        <a class="navbar-brand" href="./about.html" id="about">About</a>
+        <a class="navbar-brand" href="./work.html" id="work-samples">Work Samples</a>
+        <a class="navbar-brand" href="./resume.html" id="resume">Resume</a>
+        <a class="navbar-brand" href="./contact.html" id="contact">Contact</a>
     </nav>
 
     <div class="jumbotron jumbotron-fluid custom-jumbo">
