--- a/work.html
+++ b/work.html
@@ -7,10 +7,103 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
+<link rel="stylesheet" href="assets/css/work.css">
+<title>Work Samples</title>
 </head>
 <body>
+
+    <nav class="navbar navbar-light">
+        <a class="navbar-brand" href="./index.html" id="home">Home</a>
+        <a class="navbar-brand" href="./about.html" id="about">About</a>
+        <a class="navbar-brand" href="./work.html" id="work-samples">Work Samples</a>
+        <a class="navbar-brand" href="./resume.html" id="resume">Resume</a>
+        <a class="navbar-brand" href="./contact.html" id="contact">Contact</a>
+    </nav>
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/images/virtual-party.png" class="d-block w-100" alt="virtual party mom application">
+            <div class="carousel-caption d-none d-md-block text-dark custom-caption">
+                <a href="https://rpecuch.github.io/virtual-party/" class="text-dark"><h5>Virtual Party Mom</h5></a>
+              <p>A tool that generates activities for group gatherings based on the current weather conditions. In-app features include a joke generater, Cards Against Humanity, and Would You Rather?!</p>
+              <p>Created using HTML, Tailwind CSS, Bootstrap, custom CSS, JavaScript, jQuery, Moment.js, Font Awesome, and Google Fonts.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/js-quiz.png" class="d-block w-100" alt="javascript quiz application">
+            <div class="carousel-caption d-none d-md-block text-dark">
+                <a href="https://rpecuch.github.io/javascript-quiz/" class="text-dark"><h5>JavaScript Coding Quiz</h5></a>
+              <p>An interactive timed quiz about JavaScript concepts.</p>
+              <p>Created using HTML, custom CSS, and JavaScript.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/work-scheduler.png" class="d-block w-100" alt="work day scheduler application">
+            <div class="carousel-caption d-none d-md-block text-dark custom-caption">
+                <a href="https://rpecuch.github.io/work-day-scheduler/" class="text-dark"><h5>Work Day Scheduler</h5></a>
+              <p>An application to create and save events for the work day.</p>
+              <p>Created using HTML, Boostrap, custom CSS, JavaScript, jQuery, Moment.js, Font Awesome, and Google Fonts.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/weather.png" class="d-block w-100" alt="weather dashboard application">
+            <div class="carousel-caption d-none d-md-block text-dark">
+                <a href="https://rpecuch.github.io/weather-dashboard/" class="text-dark"><h5>Weather Dashboard</h5></a>
+              <p>An application to display weather forecast for a city that is searched by the user.</p>
+              <p>Created using HTML, Bootstrap, custom CSS, JavaScript, Moment.js, Font Awesome, and Google Fonts.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/password.png" class="d-block w-100" alt="password generator application">
+            <div class="carousel-caption d-none d-md-block text-dark">
+                <a href="https://rpecuch.github.io/password-generator/" class="text-dark"><h5>Password Generator</h5></a>
+              <p>An application that generates a password suggestion based on user-selected criteria.</p>
+              <p>Created using HTML, custom CSS, and JavaScript.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/prework-study-guide.png" class="d-block w-100" alt="password generator application">
+            <div class="carousel-caption d-none d-md-block text-dark custom-caption">
+                <a href="https://rpecuch.github.io/prework-study-guide/" class="text-dark"><h5>Prework Study Guide</h5></a>
+              <p>A platform with information and resources for students in the prework phase of a coding bootcamp.</p>
+              <p>Created using HTML, custom CSS, and JavaScript.</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon custom-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon custom-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+    <footer>
+        <p class="text-center">Thank you for visiting!</p>
+    </footer>
+
+    <!-- <main>
+        <aside>
+            <h2 id="contact-me">Contact Info</h2>
+            <ul>
+                <li id="phone">Phone</li>
+                <li id="email">Email</li>
+                <li><a href="https://github.com/rpecuch">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/rita-pecuch-6ab517156/">LinkedIn</a></li>
+            </ul>
+        </aside>
+    </main> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
