--- a/resume.html
+++ b/resume.html
@@ -7,13 +7,8 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
-<script src="https://kit.fontawesome.com/73525b73cb.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="assets/css/contact.css">
-<title>Contact Me</title>
+<link rel="stylesheet" href="assets/css/resume.css">
+<title>Resume</title>
 </head>
 <body>
     <nav class="navbar navbar-light">
@@ -23,18 +18,6 @@
         <a class="navbar-brand" href="./resume.html" id="resume">Resume</a>
         <a class="navbar-brand" href="./contact.html" id="contact">Contact</a>
     </nav>
-
-    <div class="jumbotron jumbotron-fluid custom-jumbo">
-        <div class="container text-center bg-light custom-container">
-          <h1 class="display-4">Contact Me</h1>
-          <ul>
-            <li><i class="fa-solid fa-phone"></i>Phone: 517-375-7765</li>
-            <li><i class="fa-solid fa-envelope"></i>Email: rpecuch@comcast.net</li>
-            <li><i class="fa-solid fa-arrow-up-right-from-square"></i><a href="https://github.com/rpecuch?tab=repositories">View GitHub Repositories</a></li>
-            <li><i class="fa-solid fa-arrow-up-right-from-square"></i><a href="https://www.linkedin.com/in/rita-pecuch-6ab517156/">View LinkedIn Profile</a></li>
-          </ul>
-        </div>
-    </div>
 
     <footer>
         <p class="text-center">Thank you for visiting!</p>
