added resume page

--- a/resume.html
+++ b/resume.html
@@ -19,6 +19,10 @@
         <a class="navbar-brand" href="./contact.html" id="contact">Contact</a>
     </nav>
 
+    <div class="d-flex">
+        <embed src="Resume.pdf" width="100%" height="1000px" />
+    </div>
+
     <footer>
         <p class="text-center">Thank you for visiting!</p>
     </footer>
