updated screenshots in readme

--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
             <img src="./assets/images/virtual-party.png" class="d-block w-100" alt="virtual party mom application">
             <div class="carousel-caption d-none d-md-block text-dark custom-caption">
                 <a href="https://rpecuch.github.io/virtual-party/" class="text-dark"><h5>Virtual Party Mom</h5></a>
-              <p>A tool that generates activities for group gatherings based on the current weather conditions. In-app features include a joke generater, Cards Against Humanity, and Would You Rather?!</p>
+              <p>A tool that generates activities for group gatherings based on the current weather conditions. In-app features include a joke generator, Cards Against Humanity, and Would You Rather?!</p>
               <p>Created using HTML, Tailwind CSS, Bootstrap, custom CSS, JavaScript, jQuery, Moment.js, Font Awesome, and Google Fonts.</p>
             </div>
           </div>
@@ -51,14 +51,14 @@
             <div class="carousel-caption d-none d-md-block text-dark custom-caption">
                 <a href="https://rpecuch.github.io/work-day-scheduler/" class="text-dark"><h5>Work Day Scheduler</h5></a>
               <p>An application to create and save events for the work day.</p>
-              <p>Created using HTML, Boostrap, custom CSS, JavaScript, jQuery, Moment.js, Font Awesome, and Google Fonts.</p>
+              <p>Created using HTML, Bootstrap, custom CSS, JavaScript, jQuery, Moment.js, Font Awesome, and Google Fonts.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./assets/images/weather.png" class="d-block w-100" alt="weather dashboard application">
             <div class="carousel-caption d-none d-md-block text-dark">
                 <a href="https://rpecuch.github.io/weather-dashboard/" class="text-dark"><h5>Weather Dashboard</h5></a>
-              <p>An application to display weather forecast for a city that is searched by the user.</p>
+              <p>An application to display the weather forecast for a city that is searched by the user.</p>
               <p>Created using HTML, Bootstrap, custom CSS, JavaScript, Moment.js, Font Awesome, and Google Fonts.</p>
             </div>
           </div>
