--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
         <div class="container text-center bg-light custom-container">
           <h1 class="display-4">Contact Me</h1>
           <ul>
-            <li><i class="fa-solid fa-phone"></i>Phone: 517-375-7765</li>
-            <li><i class="fa-solid fa-envelope"></i>Email: rpecuch@comcast.net</li>
+            <li><i class="fa-solid fa-phone"></i>517-375-7765</li>
+            <li><i class="fa-solid fa-envelope"></i>rpecuch@comcast.net</li>
             <li><i class="fa-solid fa-arrow-up-right-from-square"></i><a href="https://github.com/rpecuch?tab=repositories">View GitHub Repositories</a></li>
             <li><i class="fa-solid fa-arrow-up-right-from-square"></i><a href="https://www.linkedin.com/in/rita-pecuch-6ab517156/">View LinkedIn Profile</a></li>
           </ul>
