added more work samples

--- a/work.html
+++ b/work.html
@@ -63,6 +63,22 @@
             </div>
           </div>
           <div class="carousel-item">
+            <img src="./assets/images/note-taker.png" class="d-block w-100" alt="note taker application">
+            <div class="carousel-caption d-none d-md-block text-dark">
+                <a href="https://express-note-taker-rp.herokuapp.com/" class="text-dark"><h5>Note Taker</h5></a>
+              <p>A full-stack application to allow the user to write, save, and delete notes.</p>
+              <p>Created using HTML, Bootstrap, custom CSS, JavaScript, Node.js, and Express.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/team-generator.png" class="d-block w-100" alt="team profile generator application">
+            <div class="carousel-caption d-none d-md-block text-dark">
+                <a href="https://github.com/rpecuch/team-profile-generator" class="text-dark"><h5>Team Profile Generator</h5></a>
+              <p>A command-line application to allow the user to generate an HTML document with information about a software engineering team.</p>
+              <p>JavaScript, Node.js, HTML, Bootstrap, and Font Awesome.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
             <img src="./assets/images/password.png" class="d-block w-100" alt="password generator application">
             <div class="carousel-caption d-none d-md-block text-dark">
                 <a href="https://rpecuch.github.io/password-generator/" class="text-dark"><h5>Password Generator</h5></a>
