added kids rx project

--- a/work.html
+++ b/work.html
@@ -31,6 +31,14 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <img src="./assets/images/kids-rx.png" class="d-block w-100" alt="kids rx application">
+            <div class="carousel-caption d-none d-md-block text-dark custom-caption">
+                <a href="https://kids-rx-emr.herokuapp.com/" class="text-dark"><h5>Kids RX: Pediatric Electronic Medical Records</h5></a>
+              <p>A full-stack application that allows providers to keep track of patient records. Like other EMR systems, features include appointment scheduling, creating patient charts, writing medical record notes, logging vital signs, and logging vaccination records. What makes Kids RX different is that it is specifically designed for use in pediatrics and includes features that were implemented with children in mind.</p>
+              <p>Created using HTML, Tailwind CSS, Bootstrap, custom CSS, JavaScript, Node.js, Express, Sequelize, Moment.js, Font Awesome, and Google Fonts.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
             <img src="./assets/images/virtual-party.png" class="d-block w-100" alt="virtual party mom application">
             <div class="carousel-caption d-none d-md-block text-dark custom-caption">
                 <a href="https://rpecuch.github.io/virtual-party/" class="text-dark"><h5>Virtual Party Mom</h5></a>
