--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
     </nav>
 
     <div class="d-flex">
-        <embed src="Resume.pdf" width="100%" height="1000px" />
+        <embed src="./assets/Resume.pdf" width="100%" height="1000px" />
     </div>
 
     <footer>
