--- a/work.html
+++ b/work.html
@@ -31,6 +31,7 @@
           <li data-target="#carouselExampleCaptions" data-slide-to="6"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="7"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="8"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="9"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -38,7 +39,7 @@
             <div class="carousel-caption d-none d-md-block text-dark custom-caption">
                 <a href="https://kids-rx-emr.herokuapp.com/" class="text-dark"><h5>Kids RX: Pediatric Electronic Medical Records</h5></a>
               <p>A full-stack application that allows providers to keep track of patient records. Like other EMR systems, features include appointment scheduling, creating patient charts, writing medical record notes, logging vital signs, and logging vaccination records. What makes Kids RX different is that it is specifically designed for use in pediatrics and includes features that were implemented with children in mind.</p>
-              <p>Created using HTML, Tailwind CSS, Bootstrap, custom CSS, JavaScript, Node.js, Express, Sequelize, Moment.js, Font Awesome, and Google Fonts.</p>
+              <p>Created using HTML, Tailwind CSS, Bootstrap, custom CSS, JavaScript, Node.js, Express, MySQL, Sequelize, Moment.js, Font Awesome, and Google Fonts.</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -86,7 +87,15 @@
             <div class="carousel-caption d-none d-md-block text-dark">
                 <a href="https://github.com/rpecuch/team-profile-generator" class="text-dark"><h5>Team Profile Generator</h5></a>
               <p>A command-line application to allow the user to generate an HTML document with information about a software engineering team.</p>
-              <p>JavaScript, Node.js, HTML, Bootstrap, and Font Awesome.</p>
+              <p>Created using JavaScript, Node.js, HTML, Bootstrap, and Font Awesome.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/emp-db.png" class="d-block w-100" alt="employee database application">
+            <div class="carousel-caption d-none d-md-block text-dark">
+                <a href="https://github.com/rpecuch/employee-database" class="text-dark"><h5>Employee Database</h5></a>
+              <p>A command-line application to allow the user to view and modify an employee database.</p>
+              <p>Created using JavaScript, Node.js, and MySQL.</p>
             </div>
           </div>
           <div class="carousel-item">
