minor modifications to bio

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p class="lead">Full-Stack Web Development Student</p>
           <img src="./assets/images/headshot.jpg" alt="headshot">
           <p id="welcome">Welcome to my portfolio.</p>
-          <p>I am a web developer with a biology and healthcare background.</p>
+          <p>I am a full-stack developer with a biology and healthcare background.</p>
         </div>
     </div>
 
