--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <div class="jumbotron jumbotron-fluid custom-jumbo">
         <div class="container text-center bg-light custom-container">
           <h1 class="display-4">About</h1>
-          <p>I am a new developer currently enrolled in the full-time bootcamp at Rutgers University! I come from a background of biology and healthcare. I graduated from Oakland University with a B.S. in Biomedical Science in May 2021, and worked in clinical medicine for four years. I am interested in creating applications for use in healthcare, STEM, and athletics! I am very knowledgeable in both the healthcare and competitive athletics industries.</p>
+          <p>I am a full-stack developer currently enrolled in the full-time bootcamp at Rutgers University! I come from an extensive background of biology and healthcare. I graduated from Oakland University with a B.S. in Biomedical Science in May 2021, and worked in clinical medicine for four years. I am interested in creating applications for use in healthcare or STEM! I am very knowledgeable in both the healthcare and biological research industries.</p>
         </div>
     </div>
 
